--- a/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
@@ -34,7 +34,7 @@
             <button class="btn btn-default updater" onClick="loadViews()"><span class="glyphicon glyphicon-refresh"></span> Actualizar</button>
          </div>
          <div class="row">
-            <table id="tprf-table" class="table table-hover table-bordered table-condensed table-striped table-responsive">
+            <table id="tpr-table" class="table table-hover table-bordered table-condensed table-striped table-responsive">
             </table>
          </div>
          
