Estilo formulario modalidades

--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -73,8 +73,10 @@
        </ol>
        {% block container %}
        <div class="container-fluid">
-          <h1>Hola {{ name }}!</h1>
-          <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+          <div class="jumbotron">
+             <h1>Hola {{ name }}!</h1>
+             <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+          </div>
        </div>
 
        {% endblock %}
