--- a/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
@@ -49,8 +49,9 @@
          {% elseif com.esoficial is same as(true) %}
          <p class="text-center"><strong>COMPETICIÓN OFICIAL DEL CLUB</strong></p>
          {% endif %}
-         <a type="button" class="btn btn-m btn-default" href="../../competiciones"><span class="glyphicon glyphicon-menu-left"></span>Volver</a>
-      </div>
+         <a type="button" class="btn btn-m btn-default" href="../../competiciones"><span class="glyphicon glyphicon-menu-left"></span> Volver</a>
+         <a type="button" class="btn btn-m btn-default" href="../../pruebas/{{ com.sid }}"><span class="glyphicon glyphicon-list"></span> Lista de pruebas</a>
+         </div>
    </div>
          
          
