Formulario creacion pruebas

--- a/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
@@ -50,8 +50,8 @@
          <p class="text-center"><strong>COMPETICIÓN OFICIAL DEL CLUB</strong></p>
          {% endif %}
          <a type="button" class="btn btn-m btn-default" href="javascript:history.back()"><span class="glyphicon glyphicon-menu-left"></span> Volver</a>
-         <a type="button" class="btn btn-m btn-default" href="../../pruebas/{{ com.sid }}"><span class="glyphicon glyphicon-list"></span> Lista de pruebas</a>
-         </div>
+         <a type="button" class="btn btn-m btn-default" href="../../pruebas/{{ com.sid }}"><span class="glyphicon glyphicon-list"></span> Lista de pruebas <span class="badge">{{ com.pruebas.toArray()|length }}</span></a>
+      </div>
    </div>
          
          
