--- a/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
@@ -25,13 +25,14 @@
    <h1 id="container_title" class="row page-header">Configuración de la aplicación</h1>
    <ul class="nav nav-tabs">
       <li id="navtab-tp" role="presentation" onClick="toggleContent('tp')"><a class="clickable">Tipos de pruebas</a></li>
-      <li id="navtab-oa" role="presentation" onClick="toggleContent('oa')"><a class="clickable">Opciones Avanzadas</a></li>
+      <li id="navtab-cat" role="presentation" onClick="toggleContent('cat')"><a class="clickable">Categorías</a></li>
+      <li id="navtab-comm" role="presentation" onClick="toggleContent('comm')"><a class="clickable">Comandos</a></li>
    </ul>
    <div class="row config-content">
       <div id="tabcontent-tp" style="display:none">
          <div class="row">
             <button type="button" class="btn btn-primary" onClick="showModal('newTPR', null, null, null)"><span class="glyphicon glyphicon-plus"></span> Añadir</button>
-            <button class="btn btn-default updater" onClick="loadViews()"><span class="glyphicon glyphicon-refresh"></span> Actualizar</button>
+            <button class="btn btn-default updater hidden" onClick="loadViews()"><span class="glyphicon glyphicon-refresh spinning"></span></button>
          </div>
          <div class="row">
             <table id="tpr-table" class="table table-hover table-bordered table-condensed table-striped table-responsive">
@@ -39,7 +40,18 @@
          </div>
          
       </div>
-      <div id="tabcontent-oa" style="display:none">
+      <div id="tabcontent-cat" style="display:none">
+         <div class="row">
+            <button type="button" class="btn btn-primary" onClick=""><span class="glyphicon glyphicon-plus"></span> Añadir</button>
+            <button class="btn btn-default updater hidden" onClick="loadViews()"><span class="glyphicon glyphicon-refresh spinning"></span></button>
+            <label class="checkbox-inline pull-right"><input type="checkbox"> Mostrar categorías caducadas</label>
+         </div>
+         <div class="row">
+            <table id="cat-table" class="table table-hover table-bordered table-condensed table-striped table-responsive">
+            </table>
+         </div>
+      </div>
+      <div id="tabcontent-comm" style="display:none">
          <button id="btn_poblarbd" type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="INSERT INTO ..."><span class="glyphicon glyphicon-save"></span> Poblar BD</button>
          <button id="btn_borrarbd" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="bottom" title="DELETE FROM ..."><span class="glyphicon glyphicon-remove-circle"></span> Borrar datos BD</button>
          <button id="btn_rehacerbd" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="bottom" title="doctrine:database:drop --force&#10;doctrine:database:create&#10;doctrine:schema:update --force&#10;doctrine:fixtures:load --append"><span class="glyphicon glyphicon-refresh"></span> Rehacer BD</button>
